# bevactorio

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/: buildings.aseprite  buildings.tmx  tilemap.aseprite  tilemaps.tiled-session
assets/buildings/: belt.building.tmx  chest.building.tmx  mine.building.tmx
assets/tilesets/: io.aseprite
src/: belts.rs  build_mode.rs  buildings.rs  camera.rs  direction.rs  grid.rs  input.rs  main.rs  map.rs  mine.rs  mouse.rs  ui.rs
src/buildings/: chest.rs  guide.rs  mine.rs  templates.rs
src/buildings/templates/: loader.rs
src/input/: cursor.rs
