[package]
name = "bevactorio"
version = "0.1.0"
authors = ["Pavel Hrách <pavel@hrach.email>"]
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.2" }
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_ecs_tilemap = { version = "0.6.0" }
rand = { version = "0.8.2", features = ["small_rng"] }