[package]
name = "bevactorio"
version = "0.1.0"
authors = ["Pavel Hrách <pavel@hrach.email>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57" }
arrayvec = { version = "0.7.2" }
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_ecs_tilemap = { version = "0.6.0" }
tiled = "0.10.2"
