[package]
name = "bevactorio"
version = "0.1.0"
authors = ["Pavel Hrách <pavel@hrach.email>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72" }
arrayvec = { version = "0.7.4" }
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_ecs_tilemap = { version = "0.11.0" }
tiled = "0.11.1"
